fix? scrollbars on windows in meeting pane

--- a/frontend/css/app.scss
+++ b/frontend/css/app.scss
@@ -279,7 +279,8 @@
       width: 192px;
 
       &--fluid {
-        width: 100;
+        width: 100%;
+        overflow: hidden;
       }
 
       h4, h6 {
